--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,17 +1,22 @@
 name: CI
-env:
-  DEBUG: napi:*
-  APP_NAME: scylla_pg_js
-  MACOSX_DEPLOYMENT_TARGET: '10.13'
 on:
   release:
     types: [created]
   push:
       tags:
           - 'v[0-9]+.[0-9]+.[0-9]+'
+env:
+  DEBUG: napi:*
+  APP_NAME: scylla_pg_js
+  MACOSX_DEPLOYMENT_TARGET: '10.13'
+
   
 jobs:
+  npm_build:
+    uses: ./.github/workflows/npm_build.yml
   build:
+    needs: npm_build
+    if: needs.npm_build.result == 'success'
     strategy:
       fail-fast: false
       matrix:
