--- a/.github/workflows/ghcr_publish.yml
+++ b/.github/workflows/ghcr_publish.yml
@@ -32,6 +32,6 @@ jobs:
               run: sh bin/ghcr-publish.sh  scylla_pg_monitor
             
             - name: Build and publish the pg-migration Docker image
-              run: sh bin/ghcr-publish.sh  scylla_pg_core
+              run: sh bin/ghcr-publish.sh  scylla_pg_migration
 
    
