--- a/Dockerfile.scylla_pg_migration
+++ b/Dockerfile.scylla_pg_migration
@@ -1,4 +1,4 @@
-FROM rust:1.66.0-buster AS BUILD
+FROM rust:1.75.0-buster AS BUILD
 # Install software
 RUN update-ca-certificates && apt-get update && apt-get install -y libsasl2-dev
 
@@ -17,7 +17,7 @@ RUN adduser \
 WORKDIR /tmp
 COPY ./ .
 # Build binary in release mode
-RUN cargo build --release --bin scylla_pg_monitor
+RUN cargo build --release --bin db_migrate
 
 #
 # Run image based on buster-slim to reduce image size while still using glibc
@@ -29,8 +29,8 @@ WORKDIR /opt/build
 COPY --from=BUILD /etc/passwd /etc/passwd
 COPY --from=BUILD /etc/group /etc/group
 # Copy binary from build
-COPY --from=BUILD /tmp/target/release/scylla_pg_monitor ./
+COPY --from=BUILD /tmp/target/release/db_migrate ./
 # Use an unprivileged user
 USER ${USER}:${USER}
 # Entry point
-CMD ["/opt/build/scylla_pg_monitor"]
+CMD ["/opt/build/db_migrate"]
