--- a/scylla_pg_monitor/Cargo.toml
+++ b/scylla_pg_monitor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scylla_pg_monitor"
-version = "0.1.15"
+version = "0.1.16"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,6 +13,7 @@ chrono = "0.4"
 dotenv = "0.15"
 config = "0.13"
 serde = "1.0"
+serial_test = "3.0.0"
 
 
 # db
