--- a/scylla_pg_monitor/Cargo.toml
+++ b/scylla_pg_monitor/Cargo.toml
@@ -24,6 +24,8 @@ tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-
 scylla_models = { path = "../scylla_models" }
 scylla_pg_lib = { path = "../scylla_pg_lib" }
 scylla_pg_core = { path = "../scylla_pg_core" }
+env_logger = {workspace = true}
+log = {workspace = true}
 
 [dev-dependencies]
 scylla_operations = {path = "../scylla_operations"}
