--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ PG_PORT=
 PG_USER=
 PG_PASSWORD=
 PG_DATABASE=
+PG_POOL_SIZE=80
 
 MONITOR_POLLING_INTERVAL_IN_SECS=5
 MONITOR_TASK_RETENTION_PERIOD_IN_SECS=864000
