add scylla_pg_js-linux-x64-musl to napi config

--- a/scylla_pg_js/package.json
+++ b/scylla_pg_js/package.json
@@ -8,7 +8,8 @@
     "triples": {
       "additional": [
         "aarch64-apple-darwin",
-        "universal-apple-darwin"
+        "universal-apple-darwin",
+        "x86_64-unknown-linux-musl"
       ]
     }
   },
