--- a/scylla_pg_js/package.json
+++ b/scylla_pg_js/package.json
@@ -9,7 +9,8 @@
       "additional": [
         "aarch64-apple-darwin",
         "universal-apple-darwin",
-        "x86_64-unknown-linux-musl"
+        "x86_64-unknown-linux-musl",
+        "arm64-unknown-linux-musl"
       ]
     }
   },
@@ -41,6 +42,7 @@
     "scylla_pg_js-darwin-x64": "0.1.10",
     "scylla_pg_js-linux-x64-gnu": "0.1.10",
     "scylla_pg_js-linux-x64-musl": "0.1.10",
+    "scylla_pg_js-linux-arm64-musl": "0.1.10",
     "scylla_pg_js-darwin-arm64": "0.1.10",
     "scylla_pg_js-darwin-universal": "0.1.10"
   }
