add arm64-linux-musl distribution (#10)
* add arm64-linux-musl distribution

* chore: keeping all atrifacts on same ver

* fix: libc value for musl

* chore: node build for arm

---------

Co-authored-by: Simon O'Leary <simon.oleary@kindredgroup.com>
Co-authored-by: Amninder Kaur <amninder.kaur@kindredgroup.com>

--- a/scylla_pg_js/npm/linux-arm64-musl/package.json
+++ b/scylla_pg_js/npm/linux-arm64-musl/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "scylla_pg_js-linux-x64-musl",
+  "name": "scylla_pg_js-linux-arm64-musl",
   "version": "0.0.0",
   "os": [
     "linux"
   ],
   "cpu": [
-    "x64"
+    "arm64"
   ],
-  "main": "scylla_pg_js.linux-x64-musl.node",
+  "main": "scylla_pg_js.linux-arm64-musl.node",
   "files": [
-    "scylla_pg_js.linux-x64-musl.node"
+    "scylla_pg_js.linux-arm64-musl.node"
   ],
   "license": "MIT",
   "engines": {
