chore: update the versions and test the build

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -39,11 +39,11 @@ jobs:
             build: |-
               set -e &&
               cd scylla_pg_js && npm run build -- --target x86_64-unknown-linux-musl
-          - host: ubuntu-latest
-            target: arm64-unknown-linux-musl
+          - host: macos-latest
+            target: aarch64-unknown-linux-musl
             build: |-
               set -e &&
-              cd scylla_pg_js && npm run build -- --target arm64-unknown-linux-musl
+              cd scylla_pg_js && npm run build -- --target aarch64-unknown-linux-musl
     name: stable - ${{ matrix.settings.target }} - node@18
     runs-on: ${{ matrix.settings.host }}
     steps:
