--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -39,7 +39,7 @@ jobs:
             build: |-
               set -e &&
               cd scylla_pg_js && npm run build -- --target x86_64-unknown-linux-musl
-          - host: macos-latest
+          - host: ubuntu-latest
             target: aarch64-unknown-linux-musl
             build: |-
               set -e &&
