--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -18,22 +18,22 @@ jobs:
       fail-fast: false
       matrix:
         settings:
-          - host: macos-latest
-            target: x86_64-apple-darwin
-            build: |
-              cd scylla_pg_js && npm run build -- --target x86_64-apple-darwin
-          - host: windows-latest
-            build: cd scylla_pg_js && npm run build -- --target x86_64-pc-windows-msvc
-            target: x86_64-pc-windows-msvc
-          - host: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            build: |-
-              set -e &&
-              cd scylla_pg_js && npm run build -- --target x86_64-unknown-linux-gnu
-          - host: macos-latest
-            target: aarch64-apple-darwin
-            build: |
-              cd scylla_pg_js && npm run build -- --target aarch64-apple-darwin
+          # - host: macos-latest
+          #   target: x86_64-apple-darwin
+          #   build: |
+          #     cd scylla_pg_js && npm run build -- --target x86_64-apple-darwin
+          # - host: windows-latest
+          #   build: cd scylla_pg_js && npm run build -- --target x86_64-pc-windows-msvc
+          #   target: x86_64-pc-windows-msvc
+          # - host: ubuntu-latest
+          #   target: x86_64-unknown-linux-gnu
+          #   build: |-
+          #     set -e &&
+          #     cd scylla_pg_js && npm run build -- --target x86_64-unknown-linux-gnu
+          # - host: macos-latest
+          #   target: aarch64-apple-darwin
+          #   build: |
+          #     cd scylla_pg_js && npm run build -- --target aarch64-apple-darwin
           - host: ubuntu-latest
             target: x86_64-unknown-linux-musl
             build: |-
