--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -1,10 +1,8 @@
 name: CI
 on:
   push:
-      # branches:
-      #   -feature/*
-      # tags:
-      #     - 'v[0-9]+.[0-9]+.[0-9]+'
+      tags:
+          - 'v[0-9]+.[0-9]+.[0-9]+'
 env:
   DEBUG: napi:*
   APP_NAME: scylla_pg_js
@@ -60,14 +58,15 @@ jobs:
               rustup target add aarch64-unknown-linux-musl &&
               npm run build -- --target aarch64-unknown-linux-musl &&
               /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip *.node
-          - host: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-aarch64
-            build: |-
-              set -e &&
-              PATH=$PATH:$(pwd) chmod -R 555 $PATH &&
-              cd scylla_pg_js && npm run build -- --target aarch64-unknown-linux-gnu &&
-              aarch64-unknown-linux-gnu-strip *.node
+          # TODO add aarch64-unknown-linux-gnu
+          # - host: ubuntu-latest
+          #   target: aarch64-unknown-linux-gnu
+          #   docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian-aarch64
+          #   build: |-
+          #     set -e &&
+          #     PATH=$PATH:$(pwd) chmod -R 555 $PATH &&
+          #     cd scylla_pg_js && npm run build -- --target aarch64-unknown-linux-gnu &&
+          #     aarch64-unknown-linux-gnu-strip *.node
     name: stable - ${{ matrix.settings.target }} - node@18
     runs-on: ${{ matrix.settings.host }}
     steps:
@@ -147,38 +146,36 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: scylla_pg_js/${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-  # npm-publish:
-  #   name: npm publish
-  #   runs-on: macos-latest
-  #   environment: publish
-  #   env:
-  #     CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-  #     DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
-  #     DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_USER }}
-  #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  #   needs:
-  #     - build
-  #   if: needs.build.result == 'success'
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Setup node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 18
-  #         check-latest: true
-  #     - name: Install dependencies
-  #       run: cd scylla_pg_js && npm install
-  #     - name: Download all artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         path: scylla_pg_js/artifacts
-  #     - run: cd scylla_pg_js/artifacts && cp -R **/*.node .
-  #     - run: cd scylla_pg_js && npm run universal
-  #     - name: Move artifacts
-  #       run: cd scylla_pg_js && npm run artifacts
-  #     - run: ls -R ./scylla_pg_js/npm
-  #     - run: ls -R ./scylla_pg_js/artifacts
+  npm-publish:
+    name: npm publish
+    runs-on: macos-latest
+    environment: publish
+    env:
+      CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    needs:
+      - build
+    if: needs.build.result == 'success'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          check-latest: true
+      - name: Install dependencies
+        run: cd scylla_pg_js && npm install
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: scylla_pg_js/artifacts
+      - run: cd scylla_pg_js/artifacts && cp -R **/*.node .
+      - run: cd scylla_pg_js && npm run universal
+      - name: Move artifacts
+        run: cd scylla_pg_js && npm run artifacts
+      - run: ls -R ./scylla_pg_js/npm
+      - run: ls -R ./scylla_pg_js/artifacts
 
-  #     - name: Publish
-  #       run: PATH=$PATH:$(pwd) bin/npm-release.sh # only run on release created or tag
+      - name: Publish
+        run: PATH=$PATH:$(pwd) bin/npm-release.sh # only run on release created or tag
 
