chore: create image from template

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,11 @@ MONITOR_POLLING_INTERVAL_IN_SECS=5
 MONITOR_TASK_RETENTION_PERIOD_IN_SECS=864000
 
 RUST_LOG=ERROR
+
+# POSTGRES ENV FOR CREATE DB
+PG_DATABASE_TEMPLATE=
+PG_DATABASE_ADMIN=
+SCYLLA_CREATE_DB=
+
+# FOR DROPPING THE DB
+#SCYLLA_CLEANUP_MODE=
