--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -81,7 +81,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         if: ${{ !matrix.settings.docker }}
         with:
-          toolchain: stable
+          toolchain: stable 3 months ago
           target: ${{ matrix.settings.target }}
       - name: Cache cargo
         uses: actions/cache@v4
@@ -178,4 +178,3 @@ jobs:
 
       - name: Publish
         run: PATH=$PATH:$(pwd) bin/npm-release.sh # only run on release created or tag
-
