--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@1.75.0
         with:
-          toolchain: stable
+          toolchain: stable 3 months ago
       - run: bin/ubuntu-setup.sh
       - run: rustup component add rustfmt clippy
       - name: cargo build
