--- a/Dockerfile.scylla_pg_migration
+++ b/Dockerfile.scylla_pg_migration
@@ -17,7 +17,7 @@ RUN adduser \
 WORKDIR /tmp
 COPY ./ .
 # Build binary in release mode
-RUN cargo build --release --bin db_migrate
+RUN cargo build --release --package scylla_pg_core
 
 #
 # Run image based on buster-slim to reduce image size while still using glibc
@@ -30,7 +30,10 @@ COPY --from=BUILD /etc/passwd /etc/passwd
 COPY --from=BUILD /etc/group /etc/group
 # Copy binary from build
 COPY --from=BUILD /tmp/target/release/db_migrate ./
+COPY --from=BUILD /tmp/target/release/db_create ./
+COPY --from=BUILD /tmp/target/release/db_delete ./
+COPY --from=BUILD /tmp/bin/create_db_and_migrate.sh ./
 # Use an unprivileged user
 USER ${USER}:${USER}
 # Entry point
-CMD ["/opt/build/db_migrate"]
+CMD ["/opt/build/create_db_and_migrate.sh"]
