--- a/scylla_pg_core/Cargo.toml
+++ b/scylla_pg_core/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2021"
 
 [dependencies]
 
-tokio="1.20"
 chrono = "0.4"
 dotenv = "0.15"
 config = "0.13"
@@ -18,3 +17,11 @@ deadpool-postgres = { version = "0.10", features = ["serde"] }
 
 # db migrations
 refinery = {version="0.8", features=["tokio-postgres"]}
+
+# Logging
+log = "0.4"
+env_logger = "0.11.2"
+
+# tokio and async
+async-trait = "0.1"
+tokio = { version = "1", features = ["full"] }
