--- a/scylla_pg_monitor/Cargo.toml
+++ b/scylla_pg_monitor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scylla_pg_monitor"
-version = "0.1.22"
+version = "0.1.23"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -24,8 +24,8 @@ tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-
 scylla_models = { path = "../scylla_models" }
 scylla_pg_lib = { path = "../scylla_pg_lib" }
 scylla_pg_core = { path = "../scylla_pg_core" }
-env_logger = {workspace = true}
-log = {workspace = true}
+env_logger = "0.11.2"
+log = "0.4"
 
 [dev-dependencies]
 scylla_operations = {path = "../scylla_operations"}
