chore: fixing the toolchain version

--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -1,8 +1,8 @@
 name: CI
 on:
   push:
-      tags:
-          - 'v[0-9]+.[0-9]+.[0-9]+'
+      # tags:
+      #     - 'v[0-9]+.[0-9]+.[0-9]+'
 env:
   DEBUG: napi:*
   APP_NAME: scylla_pg_js
@@ -78,10 +78,10 @@ jobs:
           node-version: 18
           check-latest: true
       - name: Install toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@1.75.0
         if: ${{ !matrix.settings.docker }}
         with:
-          toolchain: stable 3 months ago
+          toolchain: 1.75.0
           target: ${{ matrix.settings.target }}
       - name: Cache cargo
         uses: actions/cache@v4
@@ -176,5 +176,5 @@ jobs:
       - run: ls -R ./scylla_pg_js/npm
       - run: ls -R ./scylla_pg_js/artifacts
 
-      - name: Publish
-        run: PATH=$PATH:$(pwd) bin/npm-release.sh # only run on release created or tag
+      # - name: Publish
+      #   run: PATH=$PATH:$(pwd) bin/npm-release.sh # only run on release created or tag
