--- a/.github/workflows/ghcr_publish.yml
+++ b/.github/workflows/ghcr_publish.yml
@@ -5,8 +5,8 @@ name: GHCR Publish
 # regex to check the tag format
 on:
   push:
-    tags:
-        - 'v[0-9]+.[0-9]+.[0-9]+'
+    # tags:
+    #     - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
     build:
