fix: add transactions and worker for heartbeat

--- a/scylla_pg_client/package.json
+++ b/scylla_pg_client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scylla_pg_client",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "description": "Scylla task scheduler, javascript binding.for postgres",
   "engines": {
     "node": ">=14.16.1",
@@ -14,7 +14,7 @@
   "email": "asharmaanil@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "scylla_pg_js": "0.1.23"
+    "scylla_pg_js": "0.1.24"
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
@@ -25,8 +25,7 @@
     "uuid": "^9.0.0",
     "esbuild": "^0.18.0"
   },
-  "ava": {
-  },
+  "ava": {},
   "main": "index.js",
   "types": "index.d.ts",
   "type": "module",
