--- a/scylla_pg_lib/Cargo.toml
+++ b/scylla_pg_lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scylla_pg_lib"
-version = "0.1.23"
+version = "0.1.24"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,13 +13,15 @@ tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-uuid = { version = "1", features = ["serde"] }
+uuid = { version = "1", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 async-trait = "0.1"
 dotenv = "0.15"
 # db migrations
-refinery = {version="0.8", features=["tokio-postgres"]}
+refinery = { version = "0.8", features = ["tokio-postgres"] }
 # crate depencies
 scylla_models = { path = "../scylla_models" }
 scylla_operations = { path = "../scylla_operations" }
 scylla_pg_core = { path = "../scylla_pg_core" }
+env_logger = "0.9.3"
+log = "0.4.20"
