--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -19,7 +19,7 @@ jobs:
             cargo build --release
       - run: bin/pre-commit-checks.sh
       - name: Set up Database
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Run Migrations
         run: PATH=$PATH:$(pwd) bin/component-test-setup.sh
