--- a/.github/workflows/npm_build.yml
+++ b/.github/workflows/npm_build.yml
@@ -18,7 +18,7 @@ jobs:
           run: |
             echo $(pwd)
             ls -la
-            docker-compose up -d
+            docker compose up -d
         - name: Run Migrations
           run: PATH=$PATH:$(pwd) bin/component-test-setup.sh
         - run: cd scylla_pg_js && npm install
