--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@1.75.0
+      - uses: dtolnay/rust-toolchain@1.81.0
         with:
-          toolchain: 1.75.0
+          toolchain: 1.81.0
       - run: bin/ubuntu-setup.sh
       - run: rustup component add rustfmt clippy
       - name: cargo build
@@ -19,7 +19,7 @@ jobs:
             cargo build --release
       - run: bin/pre-commit-checks.sh
       - name: Set up Database
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Run Migrations
         run: PATH=$PATH:$(pwd) bin/component-test-setup.sh
