--- a/scylla_pg_lib/Cargo.toml
+++ b/scylla_pg_lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scylla_pg_lib"
-version = "0.1.24"
+version = "0.1.25"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -25,3 +25,5 @@ scylla_operations = { path = "../scylla_operations" }
 scylla_pg_core = { path = "../scylla_pg_core" }
 env_logger = "0.9.3"
 log = "0.4.20"
+rand="0.9.0"
+hdrhistogram = "7.5.4"
