--- a/.github/workflows/ghcr_publish.yml
+++ b/.github/workflows/ghcr_publish.yml
@@ -6,7 +6,7 @@ name: GHCR Publish
 on:
   push:
     tags:
-        - 'v[0-9]+.[0-9]+.[0-9]+'
+        - 'v[0-9]+.[0-9]+.[0-9]+(-(dev|alpha|beta|rc)[0-9]*)?'
 
 jobs:
     build:
