--- a/scylla_operations/Cargo.toml
+++ b/scylla_operations/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scylla_operations"
-version = "0.1.34-dev1"
+version = "0.1.33"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
